--- a/src/App.scss
+++ b/src/App.scss
@@ -16,5 +16,6 @@
 @media screen and (max-width: 1300px) {
   .App {
      /* Align to the top when width is less than 1300px */
+     margin-left: 250px;
   }
 }
