--- a/src/Component/heading.scss
+++ b/src/Component/heading.scss
@@ -78,8 +78,8 @@
       color: #4B5665;
       display: flex;
       align-items: center;
-      position: absolute;
-      right: 150px;
+      /* position: fixed; */
+      margin-left: 150px;
     }
   }
 
